layout bugfix

--- a/frontend/src/Map.css
+++ b/frontend/src/Map.css
@@ -53,4 +53,6 @@ button:hover {
   height: 500px;
   width: 100%;
   margin-top: 20px;
+  z-index: 1;
+  position: relative;
 }
